2007-10-15  David Edelsohn  <edelsohn@gnu.org>

	* config.gcc (powerpc-ibm-aix5*): Install altivec.h

2007-10-15  Richard Guenther  <rguenther@suse.de>

	* fold-const.c (extract_array_ref): Remove.
	(fold_comparison): Handle POINTER_PLUS_EXPR with the
	generic address expression comparison folding.  Remove
	the folding that used extract_array_ref.

2007-10-15  Maxim Kuvyrkov  <maxim@codesourcery.com>

	PR target/33133
	
	* haifa-sched.c (process_insn_forw_deps_be_in_spec): Check if
	speculation type of insn can be changed before trying to do that.

2007-10-15  Eric Botcazou  <ebotcazou@libertysurf.fr>

	* dse.c (struct insn_info): Add 'frame_read' field.
	(scan_insn): For the call to a const function, set frame_read if
	reload has been run.
	If the insn reads the frame, kill the frame related stores.
	(scan_reads_nospill): Likewise.

2007-10-14  Jason Merrill  <jason@redhat.com>

	* tree-eh.c (optimize_double_finally): Don't assume that the
	cleanup we're duplicating is only one statement.

2007-10-14  Kazu Hirata  <kazu@codesourcery.com>

	* config/fixed-bit.c, config/i386/cpuid.h, config/i386/i386.c,
	config/i386/i386.md, config/i386/sse.md, function.c, jump.c,
	modulo-sched.c, ra-conflict.c, toplev.c, tree-eh.c, tree-sra.c,
	tree-ssa-dse.c, tree-vect-analyze.c, tree-vect-patterns.c,
	tree-vect-transform.c: Fix comment typos.
	* doc/extend.texi: Fix a typo.

	* c-common.h: Remove the prototype for c_expand_body.
	* c-tree.h: Remove the prototype for c_disregard_inline_limits.
	* tree.h: Remove the prototype for fold_build_call_expr.

	* c-objc-common.h (LANG_HOOKS_TREE_INLINING_CANNOT_INLINE_TREE_FN):
	Remove.
	* c-tree.h: Remove the prototype for c_cannot_inline_tree_fn.

2007-10-13  David Edelsohn  <edelsohn@gnu.org>

	* config/rs6000/aix53.h: New file.
	* config/rs6000/aix{41,43,51,52}.h (TARGET_ALTIVEC): Define to 0.
	(TARGET_ALTIVEC_ABI): Same.
	* config/rs6000/aix.h (TARGET_ALTIVEC): Delete.
	(TARGET_ALTIVEC_ABI): Delete.